--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "framer-motion": "^12.34.0",
     "next": "16.1.2",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
