--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "framer-motion": "^12.34.0",
     "next": "16.1.2",
     "primeicons": "^7.0.0",
     "primereact": "^10.9.7",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
+    "yup": "^1.7.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
